Ensure background appears on mobile

--- a/assets/css/tedx.scss
+++ b/assets/css/tedx.scss
@@ -45,8 +45,8 @@ body {
   background: transparent;
 }
 
-#landing {
-  background: rgba(0,0,0,0.25) !important;
+.hero#landing {
+  background: rgba(0,0,0,0.25);
 }
 
 .countdown-logo {
